test/MC/SVE/regression-tests/negative_tests/sve-ld1w-001.s
// RUN: not llvm-mc -triple=aarch64-none-linux-gnu -show-encoding -mattr=+sve  2>&1 < %s| FileCheck %s
// VecU32CLoad4LSSZ
// Offset register Rm cannot be xzr
ld1w z24.s, p1/z, [x6, xzr, lsl #2]
// CHECK: {{(error\:\ index\ must\ be\ an\ integer\ in\ range)|(error\:\ index\ must\ be\ a\ multiple\ of)}}
